--- a/index.html
+++ b/index.html
@@ -4,11 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <script src="scripts.js"></script>
     <title>Expense Tracker</title>
 </head>
 <body>
+    <div class="header">
+        <h1>Expense Tracker</h1>
+    </div>
+    <div class="main">
+    <table>
+            <tr>
+                <th>Type</th>
+                <th>Name</th>
+                <th>Date</th>
+                <th>Amount</th>
+                <tr>
+                <td>Credit Card</td>
+                <td>Groceries</td>
+                <td>Feb 12</td>
+                <td>$50</td>
+            </tr>
+            </tr>
+        
+    </table>
+</div>
     
 </body>
 </html>
